fixed log in button alignment

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -112,7 +112,7 @@ height: 100vh;
 }
 
 .landing-compo-top-wrapper {
-  padding-top: 100px;
+  padding-top: 150px;
   padding-bottom: 80px;
 }
 
